Update Proposal and Problem System
